--- a/app.json
+++ b/app.json
@@ -1,149 +1,90 @@
 {
- "name": "Gamerzbot - UserBot",
- "description": "GamerzBot userbot is modified version of telebot, from @Gamerzbots",
- "logo": "https://telegra.ph/file/f005d88b07a15e5cf30f3.jpg",
- "keywords": [
-  "telegram",
-  "userbot",
-  "Gamerzbot",
-  "modular",
-  "productivity"
- ],
- "repository": "https://github.com/gamerfuckerofficial/Gamerzbot",
- "website": "htts://t.me/Gamerzbots",
- "success_url": "https://t.me/Gamerzbots",
- "stack": "container",
- "env": {
-  "ENV": {
-   "description": "Setting this to ANYTHING will enable heroku.",
-   "value": "ANYTHING"
+  "name": "GamerzBot",
+  "description": "A simple Telegram userbot based on Telethon ",
+  "logo": "https://telegra.ph/file/f005d88b07a15e5cf30f3.jpg",
+  "keywords": [
+    "plugin",
+    "modular",
+    "productivity"
+  ],
+  "repository": "https://github.com/gamerfuckerofficial/Gamerzbot",
+  "website": "#TODO",
+  "success_url": "#TODO",
+  "env": {
+    "ALIVE_NAME": {
+      "description": "give your name",
+      "value": ""
+    },
+    "APP_ID": {
+      "description": "Get this value from my.telegram.org! Please do not steal",
+      "value": ""
+    },
+    "API_HASH": {
+      "description": "Get this value from my.telegram.org! Please do not steal",
+      "value": ""
+    },
+    "STRING_SESSION": {
+      "description": "Get this value by running python3 telesetup.py locally",
+      "value": ""
+    },
+    "TG_BOT_USERNAME": {
+      "description": "Needed for inline buttons maker. Make a bot at http://telegram.dog/BotFather and get the username of your bot",
+      "value": ""
+    },
+    "TG_BOT_TOKEN": {
+      "description": "Needed for inline buttons maker. Make a bot at http://telegram.dog/BotFather and get the token of your bot.Worth it. Get it.",
+      "value": ""
+    },
+    "COMMAND_HAND_LER": {
+      "description": "Set this one with only one the symbol to use it before your command to run like . , ' `",
+      "value": ".",
+      "required": false
+    },
+    "ENV": {
+      "description": "Setting this to ANYTHING will enable heroku.",
+      "value": "ANYTHING",
+      "required": false
+    },
+    "HEROKU_API_KEY": {
+      "description": "Required for updating the bot and other stuff get it from https://dashboard.heroku.com/account",
+      "value": "",
+      "required": false
+    },
+    "HEROKU_APP_NAME": {
+      "description": "YOUR app name ",
+      "value": "",
+      "required": false
+    },
+    "TZ": {
+      "description": "Required for Correct Time on autopic/get time. Know your timezone from http://www.timezoneconverter.com/cgi-bin/findzone.tzc",
+      "value": "Asia/Kolkata",
+      "required": false
+    },
+    "UPSTREAM_REPO": {
+      "description": "Use either goodcat or badcat .if you need custom deploy then type your git repo link",
+      "value": "goodcat",
+      "required": false
+    }
   },
-  "TEMP_DOWNLOAD_DIRECTORY": {
-   "description": "Where downloaded files will go.",
-   "value": "./Gamerzbot/DOWNLOADS/",
-   "required": false
-  },
-  "APP_ID": {
-   "description": "Get this value from my.telegram.org! Please do not steal",
-   "value": ""
-  },
-  "API_HASH": {
-   "description": "Get this value from my.telegram.org! Please do not steal",
-   "value": ""
-  },
-  "STRING_SESSION": {
-   "description": "Get this value by running python3 telesetup.py locally or https://repl.it/@gamerfuckeroffi/Gamerzbot online.",
-   "value": ""
-  },  
-  "CUSTOM_PMPERMIT": {
-   "description": "The message that appears when someone PM's you. Leave it as such for default message.",
-   "value": "Do not spam here, else you will be blocked automatically."
-  },  
-  "GITHUB_ACCESS_TOKEN": {
-   "description": "Your Github Access Token for gitcommit plugin.Google 'Github access token' to find.",
-   "value": "",
-   "required": false
-  },
-   "CMD_HNDLR": {
-   "description": "Used to invoke commands, leave blank for default, (dot)",
-   "value": "",
-   "required": false
-  },  
-   "SUDO_HNDLR": {
-   "description": "Used to invoke sudo commands, leave blank for default",
-   "value": "",
-   "required": false
-  },  
-  "GIT_REPO_NAME": {
-   "description": "Your repo name Example: gamerfuckerofficial/Gamerzbot, but GITHUB_ACCESS_TOKEN must be setup first.",
-   "value": "",
-   "required": false
-  },
-  "LYDIA_API_KEY": {
-   "description": "Needed for Lydia AI. Create a Intellivoid Account by visting https://coffeehouse.intellivoid.info/ to get your API.",
-   "value": "",
-   "required": false
-  },
-  "HEROKU_API_KEY": {
-   "description": "Go to https://dashboard.heroku.com/account, scroll down and press Reveal API.Required for updater to work.",
-   "value": "",
-   "required": true
-  },  
-  "CHROME_BIN": {
-   "description": "Leave as such, Google Chrome (or) Chromium binary location for selenium based modules.",
-   "value": "/usr/bin/google-chrome",
-   "required": false
-  },
-  "CHROME_DRIVER": {
-   "description": "Leave as such, ChromeDriver location for selenium based modules",
-   "value": "/usr/bin/chromedriver",
-   "required": false
-  },
-  "SUDO_USERS": {
-   "description": "Users you want to give access to your bot. (Don't allow unknown people)",
-   "value": "",
-   "required": false
-  },
-  "PRIVATE_GROUP_ID": {
-   "description": "Same value as PRIVATE_GROUP_BOT_API_ID. Must read https://telegra.ph/GamerzBot-Setup-12-15 for knowing how to get the value. Required for pmpermit.",
-   "value": "",
-   "required": true
-  },
-  "HEROKU_APP_NAME": {
-   "description": "The Value of App Name you filled in right on top.Required for updater to work.",
-   "value": "",
-   "required": true
-  },
-  "TG_BOT_TOKEN_BF_HER": {
-   "description": "Needed for inline buttons maker. Make a bot at [BotFather](http://telegram.dog/BotFather) and get the token of your bot. Get it else .help won't work.",
-   "value": "",
-   "required": true
-  },
-  "TG_BOT_USER_NAME_BF_HER": {
-   "description": "Needed for inline buttons maker. Make a bot at [BotFather](http://telegram.dog/BotFather) and get the username of your bot. Needed for .help to work.",
-   "value": "",
-   "required": true
-  },
-  "ALIVE_NAME": {
-   "description": "Your Telegram Username. ",
-   "value": "",
-   "required": false
-  },  
-  "MAX_SPAM": {
-   "description": "Number of messages one can send in your PM before being approved. By default, it is 3.",
-   "value": "3",
-   "required": false
-  },
-  "OCR_SPACE_API_KEY": {
-   "description": "Required for OCR functionality. Get from https://ocr.space/ocrapi",
-   "value": "",
-   "required": false
-  },
-  "REM_BG_API_KEY": {
-   "description": "Required for Removing image background functionality. Get from https://www.remove.bg/",
-   "value": "",
-   "required": false
-  },
-  "ALIVE_PIC": {
-   "description": "telegra.ph link to theimage you want as alive pic, leave blank for sticker",
-   "value": "",
-   "required": false
-  },
-  "PMPERMIT_PIC": {
-  "description": "telegra.ph link to theimage you want as pmpermit pic, leave blank for default one!",
-  "value": "",
-  "required": false
-  },
-  "TZ": {
-   "description": "Required for Correct Time on autopic/get time. Know your timezone from http://www.timezoneconverter.com/cgi-bin/findzone.tzc",
-   "value": "",
-   "required": false
-  }
- },
- "addons": [{
-  "plan": "heroku-postgresql",
-  "options": {
-   "version": "9.6"
-  }
- }]
+  "addons": [{
+    "plan": "heroku-postgresql",
+    "options": {
+      "version": "12"
+    }
+  }],
+  "buildpacks": [{
+    "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
+  },{
+    "url":"https://github.com/heroku/heroku-buildpack-google-chrome"
+  },{
+    "url":"https://github.com/heroku/heroku-buildpack-chromedriver"
+  },{
+    "url": "https://github.com/opendoor-labs/heroku-buildpack-p7zip"
+  },{
+    "url": "https://github.com/heroku/heroku-buildpack-apt.git"
+  },{
+    "url": "https://github.com/chrismytton/heroku-buildpack-jq"
+  },{
+    "url": "heroku/python"
+  }]
 }
