--- a/requirements.txt
+++ b/requirements.txt
@@ -1,72 +1,60 @@
-telethon
-setuptools
-wheel
+Pillow>=5.3.0
+PyGithub
 aiofiles
 aiohttp
+async_generator
+asyncurban
 beautifulsoup4
-cairosvg
+bs4
+bwb==3.0.0
 cfscrape
 coffeehouse
-colour
 covid
 cowpy
 cryptg
-csvfaker
-DateTime
-fontTools
-python-dotenv
+dnspython
 emoji
-fonttools
+gTTS-token>=1.1.3
+gTTS>=2.0.1
 geopy
 gitpython
-glitch_this
-google-api-python-client
-google-auth-httplib2
+google-api-python-client==1.8.0
 google-auth-oauthlib
-googletrans==4.0.0-rc1
+google_images_download>=2.7.1
+googletrans==3.1.0a0
 gsearch
-gtts
 hachoir
 heroku3
-html-telegraph-poster
+httplib2<0.18.0
 humanize
-jotquote
-justwatch
-kwot
-lottie
 lxml
 lyricsgenius
-nekos.py
-patool
-Pillow
-prettytable
-programmingquotes
-psutil
-psycopg2
-PyDictionary
-pyfiglet
-PyGithub
-pygments
-pylast
-PyLyrics
-pymediainfo
+oauth2client
+psycopg2-binary
 pySmartDL
+pybase64>=0.4.0
+pyfiglet
+pylast
+pymongo
 python-barcode
-pytuneteller
+python-dotenv
+python-magic
+pytube
 pytz
 qrcode
 regex
-requests
-search-engine-parser
+requests>=2.18.4
+search-engine-parser>=0.4.2
 selenium
 spamwatch
-speedtest-cli
-sqlalchemy
+speedtest-cli>=2.0.2
+sqlalchemy>=1.2
 telegraph
+telethon>=1.17
 tswift
+urbandict
 validators
-vcsi
-wand
-wikipedia
-youtube_dl
+wheel
+wikipedia>=1.4.0
+youtube-dl
 youtube-search-python
