--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,13 @@ Pillow>=5.3.0
 PyGithub
 aiofiles
 aiohttp
+aria2p
 async_generator
-asyncurban
 beautifulsoup4
 bs4
 bwb==3.0.0
 cfscrape
 coffeehouse
-covid
 cowpy
 cryptg
 dnspython
@@ -21,16 +20,17 @@ gitpython
 google-api-python-client==1.8.0
 google-auth-oauthlib
 google_images_download>=2.7.1
-googletrans==3.1.0a0
+googletrans>=2.4.0
 gsearch
 hachoir
 heroku3
-httplib2<0.18.0
+httplib2
 humanize
 lxml
-lyricsgenius
 oauth2client
+psycopg2
 psycopg2-binary
+PyLyrics
 pySmartDL
 pybase64>=0.4.0
 pyfiglet
@@ -46,15 +46,10 @@ regex
 requests>=2.18.4
 search-engine-parser>=0.4.2
 selenium
-spamwatch
 speedtest-cli>=2.0.2
 sqlalchemy>=1.2
 telegraph
-telethon>=1.17
-tswift
-urbandict
-validators
-wheel
+urbandict>=0.5
 wikipedia>=1.4.0
 youtube-dl
-youtube-search-python
+covid
